--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/AssignUsersDialog.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/AssignUsersDialog.mxml
@@ -21,7 +21,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="528" height="350" fontSize="12" title="{getTitle()}" creationComplete="onCreationComplete();">
+<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="684" height="350" fontSize="12" title="{getTitle()}" creationComplete="onCreationComplete();">
 
     <mx:Metadata>
         [Name("assignUsersDialog")]
@@ -149,14 +149,14 @@
         ]]>
     </mx:Script>
     
-    <mx:Label id="notAssignedLbl" x="83" y="10" text="{getNotAssignedLabel()}"/>
-    <mx:List id="allLst" y="39" x="10" width="202" height="225" doubleClickEnabled="true" doubleClick="moveRight();" labelFunction="formatFunction" allowMultipleSelection="true" dataProvider="{notAssigned}" enabled="true" alternatingItemColors="[#B7BABC, #FFFFFF]"/>
+    <mx:Label id="notAssignedLbl" x="10" y="10" text="{getNotAssignedLabel()}" width="294"/>
+    <mx:List id="allLst" y="39" x="10" width="294" height="225" doubleClickEnabled="true" doubleClick="moveRight();" labelFunction="formatFunction" allowMultipleSelection="true" dataProvider="{notAssigned}" enabled="true" alternatingItemColors="[#B7BABC, #FFFFFF]"/>
 
-    <mx:Button x="234" y="117" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_assignUsers_move_right')}" icon="@Embed(source='assets/images/icons/arrow_right.png')" click="moveRight()"/>
-    <mx:Button x="234" y="147" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_assignUsers_move_left')}" icon="@Embed(source='assets/images/icons/arrow_left.png')" click="moveLeft()"/>
+    <mx:Button x="312" y="117" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_assignUsers_move_right')}" icon="@Embed(source='assets/images/icons/arrow_right.png')" click="moveRight()"/>
+    <mx:Button x="312" y="147" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_assignUsers_move_left')}" icon="@Embed(source='assets/images/icons/arrow_left.png')" click="moveLeft()"/>
 
-    <mx:Label id="assignedLbl" x="348" y="10" text="{getAssignedLabel()}"/>
-    <mx:List id="assLst" y="39" x="296" width="202" height="225" doubleClickEnabled="true" doubleClick="moveLeft();" labelFunction="formatFunction" allowMultipleSelection="true" dataProvider="{toAssign}" enabled="true" alternatingItemColors="[#B7BABC, #FFFFFF]"/>
+    <mx:Label id="assignedLbl" x="360" y="10" text="{getAssignedLabel()}" width="294"/>
+    <mx:List id="assLst" y="39" x="360" width="294" height="225" doubleClickEnabled="true" doubleClick="moveLeft();" labelFunction="formatFunction" allowMultipleSelection="true" dataProvider="{toAssign}" enabled="true" alternatingItemColors="[#B7BABC, #FFFFFF]"/>
 
     <mx:HBox width="100%" horizontalAlign="center" x="0" y="272">
         <mx:Button id="setBtn" label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'btn_accept')}" click="accept(event)" fontSize="12"/>
