Some minor changes on the preferences fragments
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1528 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
@@ -21,11 +21,15 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#C2DAEF" creationComplete="onCreate()" currentState="appPrefState">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:ui="org.openwms.web.flex.client.view.fragments.*"
+    width="100%" height="100%" backgroundColor="#C2DAEF" creationComplete="onCreate()">
 
     <mx:Metadata>
         [Name]
         [ManagedEvent(name="PROPERTY.LOAD_ALL_PROPERTIES")]
+        [ManagedEvent(name="PREFERENCE.SELECTION_CHANGED")]
+        [ManagedEvent(name="PREFERENCE.DELETE_PREFERENCE")]
+        [ManagedEvent(name="PREFERENCE.SAVE_PREFERENCE")]
         [ManagedEvent(name="LOAD_ALL_USERS")]
         [ManagedEvent(name="LOAD_ALL_ROLES")]
         [ResourceBundle("appMain")]
@@ -73,8 +77,6 @@
              */
             public var iden : Identity;
             [Bindable]
-            private var selected : AbstractPreference = null;
-            [Bindable]
             private var selAppPref : ApplicationPreference = null;
             [Bindable]
             private var selModPref : ModulePreference = null;
@@ -83,6 +85,9 @@
             [Bindable]
             private var selUserPref : UserPreference = null;
         
+            /**
+             * Load all Users and all Roles when not already done before and load all properties.
+             */
             private function onCreate() : void {
             	if(modelLocator.allUsers.length == 0) {
             		dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
@@ -90,117 +95,49 @@
             	if(modelLocator.allRoles.length == 0) {
             		dispatchEvent(new RoleEvent(RoleEvent.LOAD_ALL_ROLES));
             	}
+            	this.addEventListener("preferenceSelectionChanged", onSelect);
                 reload();
             }
             
-            private function create() : void {
+            private function createPreference() : void {
                 var pop : CreatePreferenceDialog = CreatePreferenceDialog(PopUpManager.createPopUp(this, CreatePreferenceDialog, true));
                 PopUpManager.centerPopUp(pop);
             }
             
+            private function deleteSelected() : void {
+            	dispatchEvent(new PropertyEvent(PropertyEvent.PREFERENCE_DELETE_PREFERENCE));
+            }
+
+            private function saveSelected() : void {
+            	appPanel.bindProperties(new PropertyEvent(PropertyEvent.PREFERENCE_SAVE_PREFERENCE));
+            }
+
             private function reload() : void {
                 dispatchEvent(new PropertyEvent(PropertyEvent.LOAD_ALL_PROPERTIES));
             }
             
-            private function onSelect(event : ListEvent) : void {
-            	selected = event.currentTarget.selectedItem as AbstractPreference;
-            	typeCmb.selectedItem = selected;
+            private function onSelect(event : PropertyEvent) : void {
+            	prefs.selected = event.data as AbstractPreference;
+            	dispatchEvent(new PropertyEvent(PropertyEvent.PREFERENCE_SELECTION_CHANGED));
             }
             
-            private function labelPreference(item : *) : String {
-            	trace("Preference:"+(item as     AbstractPreference).toString());
-            	return (item as AbstractPreference).toString();
-            }
-            
-            private function appPrefStateEntered(event : FlexEvent) : void {
-            	trace("Entered State ApplicationPreferenced");
-            	if (appPrefsLst.selectedItem == null && prefs.appPrefsAsCollection.length > 0) {
-            		appPrefsLst.selectedItem = prefs.appPrefsAsCollection.getItemAt(0);
-            	}
-           		selected = appPrefsLst.selectedItem as ApplicationPreference;
-            	typeCmb.enabled = false;
-            	ownerTxt.editable = false;
-            }
-            private function onAppPrefSelect(event : ListEvent) : void {
-            	selected = event.currentTarget.selectedItem as ApplicationPreference;
-            	typeCmb.selectedIndex = prefs.types.indexOf(selected);
-            }
-
-            private function modPrefStateEntered(event : FlexEvent) : void {
-            	trace("Entered State ModulePreferenced");
-            	if (modPrefsLst.selectedItem == null && prefs.modulePrefs.length > 0) {
-            		modPrefsLst.selectedItem = prefs.modulePrefs.getItemAt(0);
-            	}
-           		selected = modPrefsLst.selectedItem as ModulePreference;
-            	typeCmb.enabled = true;
-            	ownerTxt.editable = true;
-            }
         ]]>
     </mx:Script>
     <mx:HBox x="10" y="10" width="95%" verticalAlign="middle" backgroundColor="#FFA6A6">
         <mx:Label x="10" y="10" text="{I18nUtil.trans(I18nUtil.APP_MAIN, 'txt_preferences_screen_header')}" fontSize="24"/>
         <mx:VRule height="10"/>
-        <mx:Button id="addBtn" enabled="{selected &amp;&amp; iden.ifAllGranted('APP_add_preference_button')}" click="create();" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_add_pref')}" icon="@Embed(source='/assets/images/Preference--plus.png')"/>
+        <mx:Button id="addBtn" click="createPreference();" enabled="{iden.ifAllGranted('APP_add_preference_button')}" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_add_pref')}" icon="@Embed(source='/assets/images/Preference--plus.png')"/>
         <mx:VRule height="10"/>
-        <mx:Button id="deleteBtn" enabled="{selected &amp;&amp; !selected.fromFile &amp;&amp; iden.ifAllGranted('APP_delete_preference_button')}" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_delete_user')}" icon="@Embed(source='/assets/images/Preference--minus.png')"/>
+        <mx:Button id="deleteBtn" click="deleteSelected();" enabled="{prefs.selected &amp;&amp; !prefs.selected.fromFile &amp;&amp; iden.ifAllGranted('APP_delete_preference_button')}" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_delete_user')}" icon="@Embed(source='/assets/images/Preference--minus.png')"/>
         <mx:VRule height="10"/>
-        <mx:Button id="saveBtn" enabled="{selected &amp;&amp; iden.ifAllGranted('APP_save_preference_button')}" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_save_user')}" icon="@Embed(source='/assets/images/Preference--save.png')"/>
+        <mx:Button id="saveBtn" click="saveSelected();" enabled="{prefs.selected &amp;&amp; iden.ifAllGranted('APP_save_preference_button')}" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_save_user')}" icon="@Embed(source='/assets/images/Preference--save.png')"/>
         <mx:VRule height="10"/>
         <mx:Button id="reloadBtn" click="reload();" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_reload_users')}" icon="@Embed(source='assets/images/icons/refresh.png')"/>
     </mx:HBox>
     <mx:HRule x="9" y="53" width="95%"/>
 
-    <mx:states>
-        <mx:State name="appPrefState" enterState="appPrefStateEntered(event)" exitState="modPrefStateEntered(event)"/>
-        <mx:State name="modPrefState" />
-    </mx:states>
-
     <mx:HBox x="10" y="63" width="95%" height="100%">
-        <mx:Accordion x="10" y="63" width="300" height="95%">
-            <mx:Canvas label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_app_prefs')}" width="100%" height="100%"  show="appPrefStateEntered(event)">
-                <mx:List id="appPrefsLst" labelField="key" dataProvider="{prefs.appPrefsAsCollection}" itemClick="onAppPrefSelect(event)" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%" x="0" y="0" />
-            </mx:Canvas>
-            <mx:Canvas label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_module_prefs')}" width="100%" height="100%" show="modPrefStateEntered(event)">
-                <mx:List id="modPrefsLst" labelField="key" dataProvider="{prefs.modulePrefs}" itemClick="onSelect(event)" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%" x="0" y="0" />
-            </mx:Canvas>
-            <mx:Canvas label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_role_prefs')}" width="100%" height="100%">
-                <mx:List id="rolePrefsLst" labelField="key" dataProvider="{prefs.rolePrefs}" itemClick="onSelect(event)" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%" x="0" y="0" />
-            </mx:Canvas>
-            <mx:Canvas label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_user_prefs')}" width="100%" height="100%">
-                <mx:List id="userPrefsLst" labelField="key" dataProvider="{prefs.userPrefs}" itemClick="onSelect(event)" alternatingItemColors="[#EEEEEE, #FFFFFF]" width="100%" height="100%" x="0" y="0" />
-            </mx:Canvas>
-        </mx:Accordion>
-        <mx:Panel id="detailsPnl" title="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_preferences_screen_details')}" height="95%" layout="absolute" width="100%">
-            <mx:Label  id="keyLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_key')}" fontWeight="bold" x="10" y="10" />
-            <mx:TextInput id="keyTxt" width="228" x="178" y="8"/>
-            
-            <mx:Label id="descriptionLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_description')}" x="10" y="36" />
-            <mx:TextArea id="textarea1" text="{selected.description}" x="178" y="35" width="228" />
-
-            <mx:HRule id="hrule0" x="10" y="87" width="95%" />
-
-            <mx:Label id="typeLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_type')}" x="10" y="99" />
-            <mx:ComboBox id="typeCmb" dataProvider="{prefs.types}" labelFunction="{prefs.formatType}" width="228" x="178" y="97" />
-
-            <mx:Label id="ownerLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_owner')}" fontWeight="normal" x="10" y="126" />
-            <mx:TextInput id="ownerTxt" width="228" x="178" y="124"/>
-
-            <mx:HRule id="hrule2" x="10" y="154" width="95%" />
-
-            <mx:Label id="valueLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_value')}" x="10" y="166" />
-            <mx:TextInput id="valueTxt" text="{selected.value}" width="228" x="178" y="164" />
-
-            <mx:Label id="floatValueLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_floatValue')}" x="10" y="192" />
-            <mx:TextInput id="floatValueTxt" text="{selected.floatValue}" width="228" x="178" y="190" />
-
-            <mx:Label id="minimumLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_minimum')}" x="10" y="218" />
-            <mx:TextInput id="minimumTxt" text="{selected.minimum}" width="228" x="178" y="216" />
-
-            <mx:Label id="maximumLbl" text="{I18nUtil.trans(I18nUtil.APP_ENTITY, 'entity_preference_maximum')}" x="10" y="244" />
-            <mx:TextInput id="maximumTxt" text="{selected.maximum}" width="228" x="178" y="240" />
-
-            <mx:HRule id="hrule1" x="10" y="270" width="95%" />
-            <mx:Button id="saveBtn2" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_preferences_screen_save_user')}" icon="@Embed(source='/assets/images/Preference--save.png')" x="178" y="280"/>
-        </mx:Panel>
+        <ui:PreferencesList x="10" y="63" width="300" height="95%"/>
+        <ui:ApplicationPropertyDetailsPanel id="appPanel" height="95%" width="100%"/>
     </mx:HBox>
 </mx:Canvas>
