--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
@@ -42,6 +42,7 @@
             import org.granite.tide.spring.Context;
             import org.granite.tide.spring.Identity;
 
+            import org.openwms.core.domain.system.usermanagement.Grant;
             import org.openwms.core.domain.system.usermanagement.SecurityObject;
             import org.openwms.core.domain.system.usermanagement.User;
             import org.openwms.core.domain.system.usermanagement.Role;
@@ -70,6 +71,9 @@
             [Bindable]
             private var selected : Role = null;
 
+            /**
+             * Load all Users when not already done before and load all Roles.
+             */
             private function onCreate() : void {
                 if (modelLocator.allUsers.length == 0) {
                     dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
@@ -184,19 +188,6 @@
                 dispatchEvent(new RoleEvent(RoleEvent.LOAD_ALL_ROLES));
             }
             
-            /**
-             * Define how User information is displayed.
-             */
-            private function formatUser(item : *) : String {
-            	return (item as User).fullname+" ("+(item as User).username+")";
-            }
-
-            /**
-             * Define how Grant information is displayed.
-             */
-            private function formatGrant(item : *) : String {
-                return (item as SecurityObject).description + " (" + (item as SecurityObject).name + ")";
-            }
         ]]>
     </mx:Script>
 
@@ -227,7 +218,7 @@
 	                    <mx:VRule height="10" visible="{iden.ifAllGranted('APP_assign_grants_button')}"/>
 	                    <cor:ImageButton id="assignedGrantsBtn" visible="{iden.ifAllGranted('APP_assign_grants_button')}" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_role_assign_grants')}" click="addGrants()" source="@Embed(source='assets/images/icons/grant--add.png')"/>
 	                </mx:HBox>
-	                <mx:List id="grantsLst" height="200" width="100%" allowMultipleSelection="true" labelFunction="formatGrant" dataProvider="{selected.grants}"/>
+	                <mx:List id="grantsLst" dataProvider="{selected.grants}" dataTipField="name" showDataTips="true" allowMultipleSelection="true" labelFunction="{Grant.formatWithDescriptionName}" height="200" width="100%" />
 	            </mx:VBox>
 	            <mx:VBox width="50%">
 			        <mx:HBox verticalAlign="middle" backgroundColor="#FFA6A6" width="100%" height="25" backgroundAlpha="0.5">
@@ -237,7 +228,7 @@
 			            <mx:VRule height="10" />
 			            <cor:ImageButton id="removeUsersBtn" enabled="{iden.ifAllGranted('APP_assign_users_button')}" toolTip="{I18nUtil.trans(I18nUtil.APP_MAIN, 'ttip_role_remove_users_from_role')}" click="removeUsers()" source="@Embed(source='/assets/images/User--minus.png')"/>
 			        </mx:HBox>
-	                <mx:List id="usersLst" height="200" width="100%" allowMultipleSelection="true" labelFunction="formatUser" dataProvider="{selected.users}" />
+	                <mx:List id="usersLst" dataProvider="{selected.users}" allowMultipleSelection="true" labelFunction="{User.formatWithFullnameUsername}" height="200" width="100%" />
 	            </mx:VBox>
             </mx:HBox>
         </mx:VBox>
